--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
     body {
         background: #fdf7e3;
-        height: 100vh;
+        height: 50vh;
         margin: 0;
         display: flex;
         justify-content: center;
@@ -21,7 +21,7 @@
         height: 400px;
         display: flex;
         justify-content: center;
-        align-items: flex-end;
+        align-items: center;
     }
 
     /* Maceta */
